// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Text Passing Content 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "backgroundColor": "rgba(240,240,240,1.00)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
/>
`;

exports[`Storyshots Components|Text Style Presets 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "backgroundColor": "rgba(240,240,240,1.00)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
/>
`;

exports[`Storyshots Components|Text Styling 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "backgroundColor": "rgba(240,240,240,1.00)",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
/>
`;

exports[`Storyshots Internal|Style Library Style dynamically 1`] = `
<div
  className="css-view-1dbjc4n r-backgroundColor-kemksi r-borderColor-1xc7w19 r-borderStyle-1phboty r-borderWidth-rs99b7"
>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,226,208,1.00)",
      }
    }
  >
    Test
  </div>
</div>
`;

exports[`Storyshots Internal|Style Library Style statically 1`] = `
<div
  className="css-view-1dbjc4n r-backgroundColor-kemksi r-borderColor-1xc7w19 r-borderStyle-1phboty r-borderWidth-rs99b7"
>
  <div
    className="css-text-901oao r-color-jwli3a"
    dir="auto"
  >
    Test
  </div>
</div>
`;
